Create page structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,410 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <div class="header bg-neutral-100">
+        <div class="search-bar">
+          <img
+            src="assets/images/icons/magnify.svg"
+            alt="Search"
+            title="Search"
+            class="icon"
+          />
+          <input class="text-input" type="text" name="search" value="" />
+        </div>
+        <div class="user-info">
+          <img
+            src="assets/images/icons/bell-ring-outline.svg"
+            alt="Notifications"
+            title="Notifications"
+            class="icon"
+          />
+          <img
+            src="assets/images/avatars/avatar1.svg"
+            alt="Avatar"
+            title="Avatar"
+            class="avatar bg-orange"
+          />
+          <span class="fs-600 fw-bold">Morgan Oakley</span>
+        </div>
+        <div class="greeting">
+          <img
+            src="assets/images/avatars/avatar1.svg"
+            alt="Avatar"
+            title="Avatar"
+            class="avatar avatar-lrg bg-orange lrg"
+          />
+          <div class="fs-300 fw-bold">Hi there,</div>
+          <div class="fs-900 fw-bold">
+            Morgan Oakley (<a href="#">@morgan</a>)
+          </div>
+        </div>
+        <div class="buttons">
+          <button type="button" class="button">New</button>
+          <button type="button" class="button">Upload</button>
+          <button type="button" class="button">Share</button>
+        </div>
+      </div>
+
+      <div class="sidebar bg-primary-400">
+        <div class="logo">
+          <a href="#">
+            <img
+              src="assets/images/icons/view-dashboard.svg"
+              alt="Dashboard"
+              title="Dashboard"
+              class="icon icon-lrg icon-white"
+            />
+            <h1 class="fs-950 fw-bold logo-name">Dashboard</h1>
+          </a>
+        </div>
+        <nav class="nav">
+          <ul>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/home.svg"
+                  alt="Home"
+                  title="Home"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Home</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/card-account-details-outline.svg"
+                  alt="Profile"
+                  title="Profile"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Profile</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/message.svg"
+                  alt="Message"
+                  title="Messages"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Messages</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/clock-time-three.svg"
+                  alt="History"
+                  title="History"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">History</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/file-multiple.svg"
+                  alt="Tasks"
+                  title="Tasks"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Tasks</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/account-group.svg"
+                  alt="Communities"
+                  title="Communities"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Communities</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/cog.svg"
+                  alt="Settings"
+                  title="Settings"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Settings</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/help-box.svg"
+                  alt="Support"
+                  title="Support"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Support</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="assets/images/icons/shield-check.svg"
+                  alt="Privacy"
+                  title="Privacy"
+                  class="icon icon-white"
+                />
+                <span class="fs-800 fw-semi-bold">Privacy</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="main-content bg-neutral-400">
+        <div class="projects">
+          <h2 class="fs-700 fw-semi-bold">Your Projects</h2>
+          <div class="card">
+            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+            <p class="text-neutral-700 fs-500">
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+              erat, id facilisis felis accumsan nec.
+            </p>
+            <div class="card-buttons">
+              <img
+                src="assets/images/icons/star-plus-outline.svg"
+                alt="Favorite"
+                title="Favorite"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/eye-plus-outline.svg"
+                alt="Watch"
+                title="Watch"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/source-fork.svg"
+                alt="Share"
+                title="Share"
+                class="icon"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+            <p class="text-neutral-700 fs-500">
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+              erat, id facilisis felis accumsan nec.
+            </p>
+            <div class="card-buttons">
+              <img
+                src="assets/images/icons/star-plus-outline.svg"
+                alt="Favorite"
+                title="Favorite"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/eye-plus-outline.svg"
+                alt="Watch"
+                title="Watch"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/source-fork.svg"
+                alt="Share"
+                title="Share"
+                class="icon"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+            <p class="text-neutral-700 fs-500">
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+              erat, id facilisis felis accumsan nec.
+            </p>
+            <div class="card-buttons">
+              <img
+                src="assets/images/icons/star-plus-outline.svg"
+                alt="Favorite"
+                title="Favorite"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/eye-plus-outline.svg"
+                alt="Watch"
+                title="Watch"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/source-fork.svg"
+                alt="Share"
+                title="Share"
+                class="icon"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+            <p class="text-neutral-700 fs-500">
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+              erat, id facilisis felis accumsan nec.
+            </p>
+            <div class="card-buttons">
+              <img
+                src="assets/images/icons/star-plus-outline.svg"
+                alt="Favorite"
+                title="Favorite"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/eye-plus-outline.svg"
+                alt="Watch"
+                title="Watch"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/source-fork.svg"
+                alt="Share"
+                title="Share"
+                class="icon"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+            <p class="text-neutral-700 fs-500">
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+              erat, id facilisis felis accumsan nec.
+            </p>
+            <div class="card-buttons">
+              <img
+                src="assets/images/icons/star-plus-outline.svg"
+                alt="Favorite"
+                title="Favorite"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/eye-plus-outline.svg"
+                alt="Watch"
+                title="Watch"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/source-fork.svg"
+                alt="Share"
+                title="Share"
+                class="icon"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+            <p class="text-neutral-700 fs-500">
+              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+              erat, id facilisis felis accumsan nec.
+            </p>
+            <div class="card-buttons">
+              <img
+                src="assets/images/icons/star-plus-outline.svg"
+                alt="Favorite"
+                title="Favorite"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/eye-plus-outline.svg"
+                alt="Watch"
+                title="Watch"
+                class="icon"
+              />
+              <img
+                src="assets/images/icons/source-fork.svg"
+                alt="Share"
+                title="Share"
+                class="icon"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="announcements-container">
+          <h2 class="fs-700 fw-semi-bold">Announcements</h2>
+          <div class="announcements card">
+            <div>
+              <h3 class="fs-300 fw-semi-bold">Site Maintenance</h3>
+              <p class="text-neutral-700 fs-100">
+                Vestibulum condimentum tellus lacus, in accumsan elit maximus
+                ac. Donec hendrerit sodales congue...
+              </p>
+            </div>
+            <hr />
+            <div>
+              <h3 class="fs-300 fw-semi-bold">Site Maintenance</h3>
+              <p class="text-neutral-700 fs-100">
+                Vestibulum condimentum tellus lacus, in accumsan elit maximus
+                ac. Donec hendrerit sodales congue...
+              </p>
+            </div>
+            <hr />
+            <div>
+              <h3 class="fs-300 fw-semi-bold">Site Maintenance</h3>
+              <p class="text-neutral-700 fs-100">
+                Vestibulum condimentum tellus lacus, in accumsan elit maximus
+                ac. Donec hendrerit sodales congue...
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="trending-container">
+          <h2 class="fs-700 fw-semi-bold">Trending</h2>
+          <div class="trending card">
+            <div>
+              <img
+                src="assets/images/avatars/avatar2.svg"
+                alt="avatar"
+                title="avatar"
+                class="avatar bg-light-blue"
+              />
+              <div class="fs-300"><a href="#">@tegan</a></div>
+              <div class="text-neutral-700 fs-300">World Peace Builder</div>
+            </div>
+            <div>
+              <img
+                src="assets/images/avatars/avatar1.svg"
+                alt="avatar"
+                title="avatar"
+                class="avatar bg-orange"
+              />
+              <div class="fs-300"><a href="#">@morgan</a></div>
+              <div class="text-neutral-700 fs-300">Super Cool Project</div>
+            </div>
+            <div>
+              <img
+                src="assets/images/avatars/avatar3.svg"
+                alt="avatar"
+                title="avatar"
+                class="avatar bg-grey"
+              />
+              <div class="fs-300"><a href="#">@kendall</a></div>
+              <div class="text-neutral-700 fs-300">Life Changing App</div>
+            </div>
+            <div>
+              <img
+                src="assets/images/avatars/avatar4.svg"
+                alt="avatar"
+                title="avatar"
+                class="avatar bg-pink"
+              />
+              <div class="fs-300"><a href="#">@alex</a></div>
+              <div class="text-neutral-700 fs-300">No Traffic Maker</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
