Layout and style sidebar

--- a/index.html
+++ b/index.html
@@ -54,120 +54,140 @@
       </div>
 
       <div class="sidebar bg-primary-400">
-        <div class="logo">
+        <div>
           <a href="#">
-            <img
-              src="assets/images/icons/view-dashboard.svg"
-              alt="Dashboard"
-              title="Dashboard"
-              class="icon icon-lrg icon-white"
-            />
-            <h1 class="fs-950 fw-bold logo-name">Dashboard</h1>
+            <div class="logo">
+              <img
+                src="assets/images/icons/view-dashboard.svg"
+                alt="Dashboard"
+                title="Dashboard"
+                class="icon icon-lrg nav-icon"
+              />
+              <h1 class="fs-950 fw-bold inline-block">Dashboard</h1>
+            </div>
           </a>
         </div>
-        <nav class="nav">
-          <ul>
-            <li>
-              <a href="#">
+        <ul>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/home.svg"
                   alt="Home"
                   title="Home"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Home</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Home</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/card-account-details-outline.svg"
                   alt="Profile"
                   title="Profile"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Profile</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Profile</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/message.svg"
                   alt="Message"
                   title="Messages"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Messages</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Messages</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/clock-time-three.svg"
                   alt="History"
                   title="History"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">History</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">History</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/file-multiple.svg"
                   alt="Tasks"
                   title="Tasks"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Tasks</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Tasks</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/account-group.svg"
                   alt="Communities"
                   title="Communities"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Communities</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Communities</span>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/cog.svg"
                   alt="Settings"
                   title="Settings"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Settings</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Settings</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/help-box.svg"
                   alt="Support"
                   title="Support"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Support</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
+                <span class="fs-800 fw-bold">Support</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="nav-item">
                 <img
                   src="assets/images/icons/shield-check.svg"
                   alt="Privacy"
                   title="Privacy"
-                  class="icon icon-white"
+                  class="icon nav-icon"
                 />
-                <span class="fs-800 fw-semi-bold">Privacy</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
+                <span class="fs-800 fw-bold">Privacy</span>
+              </div>
+            </a>
+          </li>
+        </ul>
       </div>
 
       <div class="main-content bg-neutral-400">
