Layout and style header

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             title="Avatar"
             class="avatar avatar-lrg bg-orange lrg"
           />
-          <div class="fs-300 fw-bold">Hi there,</div>
-          <div class="fs-900 fw-bold">
+          <span class="fs-300 fw-bold">Hi there,</span><br /><span
+            class="fs-900 fw-bold"
+          >
             Morgan Oakley (<a href="#">@morgan</a>)
-          </div>
+          </span>
         </div>
         <div class="buttons">
           <button type="button" class="button">New</button>
