Layout and style main content section

--- a/index.html
+++ b/index.html
@@ -194,190 +194,190 @@
       <div class="main-content bg-neutral-400">
         <div class="projects">
           <h2 class="fs-700 fw-semi-bold">Your Projects</h2>
-          <div class="card">
-            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
-            <p class="text-neutral-700 fs-500">
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
-            <div class="card-buttons">
-              <img
-                src="assets/images/icons/star-plus-outline.svg"
-                alt="Favorite"
-                title="Favorite"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/eye-plus-outline.svg"
-                alt="Watch"
-                title="Watch"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/source-fork.svg"
-                alt="Share"
-                title="Share"
-                class="icon"
-              />
+          <div class="cards">
+            <div class="card">
+              <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
+              <p class="text-neutral-700 fs-500">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+              <div class="card-buttons">
+                <img
+                  src="assets/images/icons/star-plus-outline.svg"
+                  alt="Favorite"
+                  title="Favorite"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/eye-plus-outline.svg"
+                  alt="Watch"
+                  title="Watch"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/source-fork.svg"
+                  alt="Share"
+                  title="Share"
+                  class="icon"
+                />
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
-            <p class="text-neutral-700 fs-500">
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
-            <div class="card-buttons">
-              <img
-                src="assets/images/icons/star-plus-outline.svg"
-                alt="Favorite"
-                title="Favorite"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/eye-plus-outline.svg"
-                alt="Watch"
-                title="Watch"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/source-fork.svg"
-                alt="Share"
-                title="Share"
-                class="icon"
-              />
+            <div class="card">
+              <h3 class="fs-600 fw-semi-bold">Super Cool Project</h3>
+              <p class="text-neutral-700 fs-500">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+              <div class="card-buttons">
+                <img
+                  src="assets/images/icons/star-plus-outline.svg"
+                  alt="Favorite"
+                  title="Favorite"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/eye-plus-outline.svg"
+                  alt="Watch"
+                  title="Watch"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/source-fork.svg"
+                  alt="Share"
+                  title="Share"
+                  class="icon"
+                />
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
-            <p class="text-neutral-700 fs-500">
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
-            <div class="card-buttons">
-              <img
-                src="assets/images/icons/star-plus-outline.svg"
-                alt="Favorite"
-                title="Favorite"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/eye-plus-outline.svg"
-                alt="Watch"
-                title="Watch"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/source-fork.svg"
-                alt="Share"
-                title="Share"
-                class="icon"
-              />
+            <div class="card">
+              <h3 class="fs-600 fw-semi-bold">Super Cool Project</h3>
+              <p class="text-neutral-700 fs-500">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+              <div class="card-buttons">
+                <img
+                  src="assets/images/icons/star-plus-outline.svg"
+                  alt="Favorite"
+                  title="Favorite"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/eye-plus-outline.svg"
+                  alt="Watch"
+                  title="Watch"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/source-fork.svg"
+                  alt="Share"
+                  title="Share"
+                  class="icon"
+                />
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
-            <p class="text-neutral-700 fs-500">
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
-            <div class="card-buttons">
-              <img
-                src="assets/images/icons/star-plus-outline.svg"
-                alt="Favorite"
-                title="Favorite"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/eye-plus-outline.svg"
-                alt="Watch"
-                title="Watch"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/source-fork.svg"
-                alt="Share"
-                title="Share"
-                class="icon"
-              />
+            <div class="card">
+              <h3 class="fs-600 fw-semi-bold">Super Cool Project</h3>
+              <p class="text-neutral-700 fs-500">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+              <div class="card-buttons">
+                <img
+                  src="assets/images/icons/star-plus-outline.svg"
+                  alt="Favorite"
+                  title="Favorite"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/eye-plus-outline.svg"
+                  alt="Watch"
+                  title="Watch"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/source-fork.svg"
+                  alt="Share"
+                  title="Share"
+                  class="icon"
+                />
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
-            <p class="text-neutral-700 fs-500">
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
-            <div class="card-buttons">
-              <img
-                src="assets/images/icons/star-plus-outline.svg"
-                alt="Favorite"
-                title="Favorite"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/eye-plus-outline.svg"
-                alt="Watch"
-                title="Watch"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/source-fork.svg"
-                alt="Share"
-                title="Share"
-                class="icon"
-              />
+            <div class="card">
+              <h3 class="fs-600 fw-semi-bold">Super Cool Project</h3>
+              <p class="text-neutral-700 fs-500">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+              <div class="card-buttons">
+                <img
+                  src="assets/images/icons/star-plus-outline.svg"
+                  alt="Favorite"
+                  title="Favorite"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/eye-plus-outline.svg"
+                  alt="Watch"
+                  title="Watch"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/source-fork.svg"
+                  alt="Share"
+                  title="Share"
+                  class="icon"
+                />
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <h3 class="fs-600 fw-semi-bold">Super cool project</h3>
-            <p class="text-neutral-700 fs-500">
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
-            <div class="card-buttons">
-              <img
-                src="assets/images/icons/star-plus-outline.svg"
-                alt="Favorite"
-                title="Favorite"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/eye-plus-outline.svg"
-                alt="Watch"
-                title="Watch"
-                class="icon"
-              />
-              <img
-                src="assets/images/icons/source-fork.svg"
-                alt="Share"
-                title="Share"
-                class="icon"
-              />
+            <div class="card">
+              <h3 class="fs-600 fw-semi-bold">Super Cool Project</h3>
+              <p class="text-neutral-700 fs-500">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+              <div class="card-buttons">
+                <img
+                  src="assets/images/icons/star-plus-outline.svg"
+                  alt="Favorite"
+                  title="Favorite"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/eye-plus-outline.svg"
+                  alt="Watch"
+                  title="Watch"
+                  class="icon"
+                />
+                <img
+                  src="assets/images/icons/source-fork.svg"
+                  alt="Share"
+                  title="Share"
+                  class="icon"
+                />
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="announcements-container">
+        <div class="announcements">
           <h2 class="fs-700 fw-semi-bold">Announcements</h2>
-          <div class="announcements card">
-            <div>
+          <div class="card">
+            <div class="announcement-item">
               <h3 class="fs-300 fw-semi-bold">Site Maintenance</h3>
               <p class="text-neutral-700 fs-100">
                 Vestibulum condimentum tellus lacus, in accumsan elit maximus
                 ac. Donec hendrerit sodales congue...
               </p>
             </div>
-            <hr />
-            <div>
+            <div class="announcement-item">
               <h3 class="fs-300 fw-semi-bold">Site Maintenance</h3>
               <p class="text-neutral-700 fs-100">
                 Vestibulum condimentum tellus lacus, in accumsan elit maximus
                 ac. Donec hendrerit sodales congue...
               </p>
             </div>
-            <hr />
-            <div>
+            <div class="announcement-item">
               <h3 class="fs-300 fw-semi-bold">Site Maintenance</h3>
               <p class="text-neutral-700 fs-100">
                 Vestibulum condimentum tellus lacus, in accumsan elit maximus
@@ -387,47 +387,47 @@
           </div>
         </div>
 
-        <div class="trending-container">
+        <div class="trending">
           <h2 class="fs-700 fw-semi-bold">Trending</h2>
-          <div class="trending card">
-            <div>
+          <div class="card">
+            <div class="trending-item">
               <img
                 src="assets/images/avatars/avatar2.svg"
                 alt="avatar"
                 title="avatar"
                 class="avatar bg-light-blue"
               />
-              <div class="fs-300"><a href="#">@tegan</a></div>
+              <div class="fs-300 username"><a href="#">@tegan</a></div>
               <div class="text-neutral-700 fs-300">World Peace Builder</div>
             </div>
-            <div>
+            <div class="trending-item">
               <img
                 src="assets/images/avatars/avatar1.svg"
                 alt="avatar"
                 title="avatar"
                 class="avatar bg-orange"
               />
-              <div class="fs-300"><a href="#">@morgan</a></div>
+              <div class="fs-300 username"><a href="#">@morgan</a></div>
               <div class="text-neutral-700 fs-300">Super Cool Project</div>
             </div>
-            <div>
+            <div class="trending-item">
               <img
                 src="assets/images/avatars/avatar3.svg"
                 alt="avatar"
                 title="avatar"
                 class="avatar bg-grey"
               />
-              <div class="fs-300"><a href="#">@kendall</a></div>
+              <div class="fs-300 username"><a href="#">@kendall</a></div>
               <div class="text-neutral-700 fs-300">Life Changing App</div>
             </div>
-            <div>
+            <div class="trending-item">
               <img
                 src="assets/images/avatars/avatar4.svg"
                 alt="avatar"
                 title="avatar"
                 class="avatar bg-pink"
               />
-              <div class="fs-300"><a href="#">@alex</a></div>
+              <div class="fs-300 username"><a href="#">@alex</a></div>
               <div class="text-neutral-700 fs-300">No Traffic Maker</div>
             </div>
           </div>
